k8s/components/apps/productivity/affine/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: affine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: affine
    spec:
      containers:
        - name: affine
          image: ghcr.io/toeverything/affine:0.26.3
          ports:
            - containerPort: 3010
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          volumeMounts:
            - name: affine-storage
              mountPath: /root/.affine/storage
            - name: affine-config-rw
              mountPath: /root/.affine/config
            - name: affine-config-cm
              mountPath: /root/.affine/config/config.json
              subPath: config.json
          readinessProbe:
            httpGet:
              path: /
              port: 3010
            initialDelaySeconds: 30
            periodSeconds: 10
      restartPolicy: Always
      volumes:
        - name: affine-storage
          emptyDir: {}
        - name: affine-config-rw
          emptyDir: {}
        - name: affine-config-cm
          configMap:
            name: affine-config
