k8s/components/apps/productivity/affine/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine
spec:
  selector:
    app: affine
  ports:
    - port: 3010
      targetPort: 3010
